--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -45,8 +45,8 @@
     "react-native-splash-screen": "3.2.0",
     "reactotron-mst": "^3.1.3",
     "reactotron-react-native": "^4.0.3",
-    "validate.js": "0.13.1"
-    "react-native-screens": "^2.0.0-beta.8",
+    "validate.js": "0.13.1",
+    "react-native-screens": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
